@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 02-Aug-2013
-#   Add :suppress option to block messages other than :warn, :error, :fatal and :exception
+#   Ensuring 1.9 compliance (just changed the shebang on the pointless bin file)
 
 module Jellog
-  # version set to 1.0.16
-  Version = '1.0.16'
+  # version set to 1.0.17
+  Version = '1.0.17'
   # date set to 02-Aug-2013
   Version_Date = '02-Aug-2013'
-  #ident string set to: jellog-1.0.16 02-Aug-2013
-  Ident = 'jellog-1.0.16 02-Aug-2013'
+  #ident string set to: jellog-1.0.17 02-Aug-2013
+  Ident = 'jellog-1.0.17 02-Aug-2013'
 end
